[gd_scene load_steps=7 format=3 uid="uid://csbh8cb10xmny"]

[ext_resource type="Script" uid="uid://ivujg52x6lmx" path="res://Scripts/Interface/LoginMenu.gd" id="1_13vea"]
[ext_resource type="FontFile" uid="uid://b6ixxpdy5in1g" path="res://Fonts/Schoolbell-Regular.ttf" id="2_uwanr"]
[ext_resource type="Theme" uid="uid://dhwifj73kh3md" path="res://Theme/Menu.tres" id="3_etwpk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlcdt"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_13vea"]
font = ExtResource("2_uwanr")
font_size = 60
font_color = Color(0, 0.513726, 0.854902, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(6, 6)

[sub_resource type="LabelSettings" id="LabelSettings_uwanr"]
font = ExtResource("2_uwanr")
font_size = 60
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[node name="LoginMenu" type="Node2D"]
script = ExtResource("1_13vea")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jlcdt")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LoginInLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_uwanr")
theme_override_font_sizes/font_size = 70
text = "Log ind for at spille"
label_settings = SubResource("LabelSettings_13vea")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="UsernameInput" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_etwpk")
placeholder_text = "Brugernavn"
max_length = 40

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="PasswordInput" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_etwpk")
placeholder_text = "Adgangskode"
secret = true

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="LoginButton" type="MenuButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_etwpk")
theme_override_fonts/font = ExtResource("2_uwanr")
theme_override_font_sizes/font_size = 40
text = "Log ind!"

[node name="BackButton" type="MenuButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_etwpk")
theme_override_fonts/font = ExtResource("2_uwanr")
theme_override_font_sizes/font_size = 40
text = "‚Üê Tilbage"

[node name="ErrorMessage" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 94.0
offset_top = 210.00002
offset_right = 696.0
offset_bottom = 383.0
rotation = -0.335037
text = "Fejl: something_wrong"
label_settings = SubResource("LabelSettings_uwanr")

[connection signal="button_up" from="PanelContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_button_up"]
